# easy-signed-distance-field

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: pages.yml
benches/: font.rs  simple.rs
src/: font.rs  font_geometry.rs  lib.rs  line.rs  math.rs
web_demo/: Cargo.toml  readme.md
web_demo/src/: engine.rs  gui_text.frag.glsl  gui_text.vert.glsl  lib.rs  shader_program.rs
web_demo/web/: index.html  index.js
web_demo/web/app/: app.d.ts  app.js  app_bg.wasm  app_bg.wasm.d.ts  package.json
