[package]
name = "easy-signed-distance-field"
version = "0.1.1"
edition = "2021"
description = "A simple, pure rust signed distance field renderer"
license = "MIT"
repository = "https://github.com/gabdube/easy-signed-distance-field"
keywords = ["game", "sdf", "signed", "distance", "field"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version="0.24", default-features=false, features=["png"], optional=true }
ttf-parser = { version="0.15.2", optional=true }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"]}

[features]
default = []
render = []
font = ["ttf-parser"]
export = ["image"]

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "font"
required-features = ["font"]
harness = false

[package.metadata.docs.rs]
all-features = true
